--- a/flights/templates/flights/flight.html
+++ b/flights/templates/flights/flight.html
@@ -17,4 +17,19 @@
         <li>No Passengers.</li>
         {% endfor %}
     </ul>
+
+    <h2>Add Passenger</h2>
+    <form action="{% url 'book' flight.id %}" method="POST">
+        {% csrf_token %}
+        <select name="passenger">
+            {% for passenger in non_passengers %}
+                <option value="{{ passenger.id }}">{{ passenger }}</option>
+            {% endfor %}
+        </select>
+        <input type="submit">
+
+    </form>
+
+    <a href="{% url 'index' %}">Home Page</a>
+
 {% endblock %}
